Fix issue where the recommendations block would spread to too wide area

--- a/src/scss/06_components/helfi_recommendations/_helfi_recommendations.scss
+++ b/src/scss/06_components/helfi_recommendations/_helfi_recommendations.scss
@@ -1,8 +1,7 @@
 .component--recommendations {
   @include component-margin-top;
   background-color:  $color-black-5;
-  margin-left: $spacing;
-  margin-right: $spacing;
+  max-width: $content-width-max;
   padding: $spacing-and-half $spacing $spacing-and-half;
 
   @include breakpoint($breakpoint-m) {
